@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Added "context_changed()" function for OpenGL windows
+	  which allows efficent texture loading (STR #1372)
 	- Added missing "const" to GLUT call (STR #1371)
 	- Fixed stray FL_RELEASE events after clicking system
 	  areas on OS X (STR #1376)
